2025-XX Feature Update for Version Next (5.0.x)

--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -103,10 +103,10 @@
                         <a href="#">
                             <button class="btn">Let's get more experimental!</button>
                         </a>
-                        <a href="#lppl">
+                        <a href="eicw-3.html">
                             <button class="btn">Showcasing my own ideas.</button>
                         </a>
-                        <a href="#lppl">
+                        <a href="eicw-4.html">
                             <button class="btn">CCL6 and the way forward.</button>
                         </a>
                     </div>
@@ -164,8 +164,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/lb1-light.png" id="lb1" class="portfolio-img ">
-                                                    <img src="img/lb1-light.png" id="lb1-img"
-                                                        class="img-fluid cp-img" alt="lb1">
+                                                    <img src="img/lb1-light.png" id="lb1-img" class="img-fluid cp-img"
+                                                        alt="lb1">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -173,8 +173,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/lb2-light.png" id="lb2" class="portfolio-img">
-                                                    <img src="img/lb2-light.png" id="lb2-img"
-                                                        class="img-fluid cp-img" alt="lb2">
+                                                    <img src="img/lb2-light.png" id="lb2-img" class="img-fluid cp-img"
+                                                        alt="lb2">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -216,8 +216,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/ic1-light.png" id="ic1" class="portfolio-img ">
-                                                    <img src="img/ic1-light.png" id="ic1-img"
-                                                        class="img-fluid cp-img" alt="ic1">
+                                                    <img src="img/ic1-light.png" id="ic1-img" class="img-fluid cp-img"
+                                                        alt="ic1">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -225,8 +225,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/ic2-light.png" id="ic2" class="portfolio-img">
-                                                    <img src="img/ic2-light.png" id="ic2-img"
-                                                        class="img-fluid cp-img" alt="ic2">
+                                                    <img src="img/ic2-light.png" id="ic2-img" class="img-fluid cp-img"
+                                                        alt="ic2">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -234,8 +234,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/ic3-light.png" id="ic3" class="portfolio-img">
-                                                    <img src="img/ic3-light.png" id="ic3-img"
-                                                        class="img-fluid cp-img" alt="ic3">
+                                                    <img src="img/ic3-light.png" id="ic3-img" class="img-fluid cp-img"
+                                                        alt="ic3">
                                                 </a>
                                                 <p style="text-align: center;">📸:
                                                     <a
@@ -287,8 +287,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/sne1-light.png" id="sne1" class="portfolio-img">
-                                                    <img src="img/sne1-light.png" id="sne1-img"
-                                                        class="img-fluid cp-img" alt="sne1">
+                                                    <img src="img/sne1-light.png" id="sne1-img" class="img-fluid cp-img"
+                                                        alt="sne1">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -296,8 +296,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/sne2-light.png" id="sne2" class="portfolio-img">
-                                                    <img src="img/sne2-light.png" id="sne2-img"
-                                                        class="img-fluid cp-img" alt="sne2">
+                                                    <img src="img/sne2-light.png" id="sne2-img" class="img-fluid cp-img"
+                                                        alt="sne2">
                                                 </a>
                                                 <p style="text-align: center;">📸:
                                                     <a
@@ -310,8 +310,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/sne3-light.png" id="sne3" class="portfolio-img">
-                                                    <img src="img/sne3-light.png" id="sne3-img"
-                                                        class="img-fluid cp-img" alt="sne3">
+                                                    <img src="img/sne3-light.png" id="sne3-img" class="img-fluid cp-img"
+                                                        alt="sne3">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -377,8 +377,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/ep1-light.png" id="ep1" class="portfolio-img ">
-                                                    <img src="img/ep1-light.png" id="ep1-img"
-                                                        class="img-fluid cp-img" alt="ep1">
+                                                    <img src="img/ep1-light.png" id="ep1-img" class="img-fluid cp-img"
+                                                        alt="ep1">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -386,8 +386,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/ep2-light.png" id="ep2" class="portfolio-img">
-                                                    <img src="img/ep2-light.png" id="ep2-img"
-                                                        class="img-fluid cp-img" alt="ep2">
+                                                    <img src="img/ep2-light.png" id="ep2-img" class="img-fluid cp-img"
+                                                        alt="ep2">
                                                 </a>
                                             </figcaption>
                                             <p style="text-align: center;">📸:
@@ -437,8 +437,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/ms1-light.png" id="ms1" class="portfolio-img ">
-                                                    <img src="img/ms1-light.png" id="ms1-img"
-                                                        class="img-fluid cp-img" alt="ms1">
+                                                    <img src="img/ms1-light.png" id="ms1-img" class="img-fluid cp-img"
+                                                        alt="ms1">
                                                 </a>
                                             </figcaption>
                                         </div>
@@ -446,8 +446,8 @@
                                         <div class="column column-pic">
                                             <figcaption>
                                                 <a href="img/ms2-light.png" id="ms2" class="portfolio-img">
-                                                    <img src="img/ms2-light.png" id="ms2-img"
-                                                        class="img-fluid cp-img" alt="ms2">
+                                                    <img src="img/ms2-light.png" id="ms2-img" class="img-fluid cp-img"
+                                                        alt="ms2">
                                                 </a>
                                             </figcaption>
                                         </div>
