--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -101,10 +101,10 @@
                     <a href="eicw-2.html">
                         <button class="btn">Let's get more experimental!</button>
                     </a>
-                    <a href="#lppl">
+                    <a href="eicw-3.html">
                         <button class="btn">Showcasing my own ideas.</button>
                     </a>
-                    <a href="#lppl">
+                    <a href="eicw-4.html">
                         <button class="btn">CCL6 and the way forward.</button>
                     </a>
                 </div>
