2025-XX Feature Update for Version Next (5.0.x)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -56,7 +56,7 @@
             <a href="../index.html" class="nav-item">Home</a>
             <a href="../about.html" class="nav-item">About</a>
             <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-            <a href="../eicw.html" class="nav-item active">EICW</a>
+            <a href="eicw.html" class="nav-item active">EICW</a>
             <a href="../blog.html" class="nav-item">Blog</a>
             <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
                     title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
@@ -950,7 +950,7 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="./js/eicw-4.js"></script>
+    <script src="js/eicw-4.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
