--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -56,7 +56,7 @@
             <a href="../index.html" class="nav-item">Home</a>
             <a href="../about.html" class="nav-item">About</a>
             <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-            <a href="../eicw.html" class="nav-item active">EICW</a>
+            <a href="eicw.html" class="nav-item active">EICW</a>
             <a href="../blog.html" class="nav-item">Blog</a>
             <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
                     title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
@@ -578,12 +578,12 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
         data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="./js/eicw-2.js"></script>
+    <script src="js/eicw-2.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
