2025-XX Feature Update for Version Next (5.0.x)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -2,33 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="UTF-8">
+  <meta name="description" content>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>EICW | NRFZ</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-    <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
+  <title>EICW | NRFZ</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
 
-    <link rel="icon" href="../img/core-img/favicon.png">
+  <link rel="icon" href="../img/core-img/favicon.png">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style-breakpoints.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style-breakpoints.css">
+  <link rel="stylesheet" href="../css/dark-mode.css">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-        gtag('config', 'G-WN76281P3Q');
-    </script>
+    gtag('config', 'G-WN76281P3Q');
+  </script>
 
 </head>
 
@@ -36,87 +36,89 @@
 
 <body>
 
-    <!-- Preloader Section -->
-    <div id="preloader">
-        <div class="loader"></div>
-        <p id="preloader-text">Just a moment...</p>
-    </div>
+  <!-- Preloader Section -->
+  <div id="preloader">
+    <div class="loader"></div>
+    <p id="preloader-text">Just a moment...</p>
+  </div>
 
+  <div id="scroll-indicator-container">
+    <div id="scroll-indicator"></div>
+  </div>
 
-    <header>
-        <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+  <header>
+    <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
-        <input type="checkbox" id="check" />
-        <label for="check" class="icons">
-            <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <i class="fa-solid fa-xmark" id="close-icon"></i>
-        </label>
+    <input type="checkbox" id="check" />
+    <label for="check" class="icons">
+      <i class="fa-solid fa-bars" id="menu-icon"></i>
+      <i class="fa-solid fa-xmark" id="close-icon"></i>
+    </label>
 
-        <nav class="navbar navbar-mobile">
-            <a href="../index.html" class="nav-item">Home</a>
-            <a href="../about.html" class="nav-item">About</a>
-            <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-            <a href="eicw.html" class="nav-item active">EICW</a>
-            <a href="../blog.html" class="nav-item">Blog</a>
-            <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-                    title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
-        </nav>
-    </header>
+    <nav class="navbar navbar-mobile">
+      <a href="../index.html" class="nav-item">Home</a>
+      <a href="../about.html" class="nav-item">About</a>
+      <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
+      <a href="eicw.html" class="nav-item active">EICW</a>
+      <a href="../blog.html" class="nav-item">Blog</a>
+      <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
+          title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+    </nav>
+  </header>
 
-    <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 100vh;">
-        <div class="wbnrfz_details_blog">
-            <div class="container">
-                <div class="portfolio-controls d-flex justify-content-between align-items-center">
-                    <!-- Filter Buttons -->
-                    <div class="portfolio-filter mt-3">
-                        <div class="col-lg-12">
-                            <div class="main-title">
-                                <nav aria-label="breadcrumb">
-                                    <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
-                                                Home</a>
-                                        </li>
-                                        <li class="breadcrumb-item active"><a
-                                                href="https://nurafianzulkifli.com/works-by-nrfz.html">
-                                                EICW
-                                            </a>
-                                        </li>
-                                    </ol>
-                                </nav>
-                                <h1 class="brc">Experimenting Improvements of Current Wayfinding</h1>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Collapsible Header -->
-                    <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-                        aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
-                        <i class="fa-solid fa-chevron-down nav-chev"></i>
-                    </div>
-                </div>
-                <!-- Collapsible Content -->
-                <div id="portfolioFilter" class="collapse">
-                    <div class="portfolio-filter mt-3">
-                        <a href="eicw.html">
-                            <button class="btn">Improving Existing Wayfinding Designs.</button>
-                        </a>
-                        <a href="eicw-2.html">
-                            <button class="btn">Let's get more experimental!</button>
-                        </a>
-                        <a href="eicw-3.html">
-                            <button class="btn">Showcasing my own ideas.</button>
-                        </a>
-                        <a href="#">
-                            <button class="btn">CCL6 and the way forward.</button>
-                        </a>
-                    </div>
-                </div>
+  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
+    style="background-image: url(img/cover-light.png); height: 100vh;">
+    <div class="wbnrfz_details_blog">
+      <div class="container">
+        <div class="portfolio-controls d-flex justify-content-between align-items-center">
+          <!-- Filter Buttons -->
+          <div class="portfolio-filter mt-3">
+            <div class="col-lg-12">
+              <div class="main-title">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
+                        Home</a>
+                    </li>
+                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                        EICW
+                      </a>
+                    </li>
+                  </ol>
+                </nav>
+                <h1 class="brc">Experimenting Improvements of Current Wayfinding</h1>
+              </div>
             </div>
+          </div>
+          <!-- Collapsible Header -->
+          <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+            aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
+            <i class="fa-solid fa-chevron-down nav-chev"></i>
+          </div>
         </div>
-    </section>
+        <!-- Collapsible Content -->
+        <div id="portfolioFilter" class="collapse">
+          <div class="portfolio-filter mt-3">
+            <a href="eicw.html">
+              <button class="btn">Improving Existing Wayfinding Designs.</button>
+            </a>
+            <a href="eicw-2.html">
+              <button class="btn">Let's get more experimental!</button>
+            </a>
+            <a href="eicw-3.html">
+              <button class="btn">Showcasing my own ideas.</button>
+            </a>
+            <a href="#">
+              <button class="btn">CCL6 and the way forward.</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
- <!-- Intro -->
- <section class="about-me-summ clearfix" style="padding-bottom: 3px;">
+  <!-- Intro -->
+  <section class="about-me-summ clearfix" style="padding-bottom: 3px;">
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
         <div class="row justify-content-center">
@@ -228,7 +230,7 @@
     </div>
   </section>
 
-  
+
   <!-- Section 1 Header -->
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="ent-img"
     style="background-image: url(img/ent-light.png)">
@@ -466,7 +468,7 @@
                   <h5>For the following, LTA has proposed three options, mainly:</h5>
                   <p>
                     <u>Option 1</u> <br>
-                    • Show towards < next interchange station > to indicate direction of train service <br>
+                    • Show towards < next interchange station> to indicate direction of train service <br>
                       • Display interchange colours <br><br>
 
                       <u>Option 2</u> <br>
@@ -475,7 +477,8 @@
 
                       <u>Option 3</u> <br>
                       • Display only Circle Line colour and station code <br>
-                      • Removed "CCL" Caplet - relying only on the colours, platform ID and towards < next interchange station >
+                      • Removed "CCL" Caplet - relying only on the colours, platform ID and towards < next interchange
+                        station>
                         <br>
                         • Only “DTL” caplet to indicate a different line
                   </p>
@@ -602,11 +605,11 @@
                   <p>
                     <u>Option 1</u> <br>
                     • Within a text box ​ <br>
-                    • Indicates Platform ID and the respective towards < next interchange station > information <br><br>
+                    • Indicates Platform ID and the respective towards < next interchange station> information <br><br>
 
                       <u>Option 2</u> <br>
                       • Displayed as a tab ​ <br>
-                      • Only indicate towards < next interchange station > information​ <br>
+                      • Only indicate towards < next interchange station> information​ <br>
                         • Includes transfer icon
                   </p>
 
@@ -615,7 +618,7 @@
                   <p>
                     <u>Option 2</u> <br>
                     • Displayed as a tab ​ <br>
-                    • Only indicate via < next interchange station > information​ <br>
+                    • Only indicate via < next interchange station> information​ <br>
                       • Includes transfer icon
                   </p>
                 </div>
@@ -666,14 +669,14 @@
                     • Full display of all stations on Circle Line ​ <br>
                     • Applying half circle fade-out approach to suggest shortest route to the listed stations. Faded
                     sections indicate longer travel time​ <br>
-                    • Indication of train service direction - towards < next interchange station > <br>
+                    • Indication of train service direction - towards < next interchange station> <br>
                       • Section B - Double liners with interchange-coloured caplets <br><br>
 
                       <u>Option 2</u> <br>
                       • Full display of all stations on Circle Line ​ <br>
                       • Applying half circle fade-out approach to suggest shortest route to the listed stations. Faded
                       sections indicate longer travel time​ <br>
-                      • Indication of train service direction - towards < next interchange station > <br>
+                      • Indication of train service direction - towards < next interchange station> <br>
                         • <span style="color: #80a8cc;">Section B - Single liner with CCL-coloured caplets</span>
                         <br><br>
                   </p>
@@ -685,7 +688,7 @@
                     • Full display of all stations on Circle Line ​ <br>
                     • Applying half circle fade-out approach to suggest shortest route to the listed stations. Faded
                     sections indicate longer travel time​
-                    • Indication of train service direction - via < next interchange station > <br>
+                    • Indication of train service direction - via < next interchange station> <br>
                       • Section B - Single liner with CCL-coloured caplets
                   </p>
                 </div>
@@ -922,47 +925,44 @@
       </div>
   </section>
 
-    <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Social Links -->
-                <div class="social-info">
-                    <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
-                            aria-hidden="true"></i></a>
-                    <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                    <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram"
-                            aria-hidden="true"></i></a>
-                </div>
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
-                    </p>
-                </div>
-            </div>
+  <footer class="footer-area">
+    <div class="container">
+      <div class="footer-content d-flex flex-column align-items-center text-center">
+        <!-- Social Links -->
+        <div class="social-info">
+          <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
         </div>
-    </footer>
+        <!-- Copywrite Text -->
+        <div class="copywrite-text">
+          <p>&copy;
+            <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
-        data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
-        data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
-        </script>
+  <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
+    data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
+    data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
+    </script>
 
-    <script src="js/eicw-4.js"></script>
+  <script src="js/eicw-4.js"></script>
 
-    <script src="../js/jquery.min.js"></script>
+  <script src="../js/jquery.min.js"></script>
 
-    <script src="../js/popper.min.js"></script>
+  <script src="../js/popper.min.js"></script>
 
-    <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
 
-    <script src="../js/pw.bundle.js"></script>
+  <script src="../js/pw.bundle.js"></script>
 
-    <script src="../js/default-assets/active.js"></script>
+  <script src="../js/default-assets/active.js"></script>
 
-    <script src="../js/preloader.js"></script>
+  <script src="../js/preloader.js"></script>
 
 </body>
 
