--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -42,6 +42,10 @@
         <p id="preloader-text">Just a moment...</p>
     </div>
 
+    <div id="scroll-indicator-container">
+      <div id="scroll-indicator"></div>
+  </div>
+
 
     <header>
         <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
